# learn_play

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: demo.launch
old/: CMakeLists.txt  package.xml  setup.py
old/launch/: gripper_action_client.launch  gripper_joystick.launch  joint_position_joystick.launch  joint_trajectory_client.launch  joint_trajectory_file_playback.launch
old/scripts/: .#joint_velocity_wobbler.py  joint_recorder.py  joint_torque_springs.py  learn_play.py
scripts/: calibrate.py  connect_ai.py  connect_game.py  connect_vision.py  ik_test.py  start_game.py  start_vision.py  start_vision_2.py  view_camera.py
share/images/: template.pxd
src/: main.cpp
src/connect_four/: pick_place.py  vision.py
src/learn_play/: __init__.py  baxter_ai.py  pick_place.py  vision.py
