<?xml version="1.0"?>

<package>
  <name>learn_play</name>
  <version>0.0.1</version>
  <description>Reinforcement Learning game for HRI</description>
  <maintainer email="nantas.nardelli@gmail.com">Nantas Nardelli</maintainer>
  <license>MIT</license>
  <url type="website">http://rad.inf.ed.ac.uk</url>
  <author email="nantas.nardelli@gmail.com">Nantas Nardelli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
</package>
