<?xml version="1.0"?>
<package>
  <name>learn_play</name>
  <version>1.0.0</version>
  <description>
    Example programs for Baxter SDK usage.
  </description>

  <maintainer email="nantas.nardelli@gmail.com">
    Nantas Nardelli
  </maintainer>
  <license>BSD</license>
  <url type="website">http://rad.inf.ed.ac.uk</url>
  <url type="repository">
    https://github.com/ipab-rad/learn_play
  </url>
  <url type="bugtracker">
    https://github.com/ipab-rad/learn_play/issues
  </url>
  <author>Nantas Nardelli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>

</package>
